--- a/src/Moss/autodoc/view/autodoc.twig
+++ b/src/Moss/autodoc/view/autodoc.twig
@@ -12,8 +12,8 @@
     <script type="text/javascript" src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="{% resource 'autodoc:css:normalize.css' %}" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="{% resource 'autodoc:css:autodoc.css' %}" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="{% resource 'Moss:autodoc:css:normalize.css' %}" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="{% resource 'Moss:autodoc:css:autodoc.css' %}" type="text/css" media="screen"/>
 </head>
 <body>
 
