changed Moss namespace to moss

--- a/src/Moss/autodoc/view/autodoc.twig
+++ b/src/Moss/autodoc/view/autodoc.twig
@@ -12,10 +12,10 @@
     <script type="text/javascript" src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="{% resource 'Moss:autodoc:js:prism.js' %}"></script>
+    <script type="text/javascript" src="{% resource 'moss:autodoc:js:prism.js' %}"></script>
 
-    <link rel="stylesheet" href="{% resource 'Moss:autodoc:css:normalize.css' %}" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="{% resource 'Moss:autodoc:css:autodoc.css' %}" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="{% resource 'moss:autodoc:css:normalize.css' %}" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="{% resource 'moss:autodoc:css:autodoc.css' %}" type="text/css" media="screen"/>
 </head>
 <body>
 
