--- a/src/Moss/autodoc/view/autodoc.twig
+++ b/src/Moss/autodoc/view/autodoc.twig
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <base href="{{ Request.baseName }}">
 
-    <title>{% trans "MOSS Autodoc" %}</title>
+    <title>{% trans "MOSS" %}</title>
 
     <link rel="author" href="./humans.txt"/>
 
@@ -124,7 +124,7 @@
 
 <script type="text/javascript">
 (function() {
-    var i, l, n, e;
+    var i, l, n;
 
     n = document.querySelectorAll('pre, code');
     for(i = 0, l = n.length; i < l; ++i) {
