--- a/src/Moss/autodoc/resource/css/autodoc.css
+++ b/src/Moss/autodoc/resource/css/autodoc.css
@@ -5,11 +5,11 @@ h1 { color: #a04; border-bottom: 2px solid #a04; }
 h2 { margin-top: 0; }
 
 h3 { margin-top: 3em; }
-h4, dt { margin-top: 1.5em; }
+h4 { margin-top: 1.5em; }
 
-:not(body) > dl, :not(nav) > ul, :not(nav) > ol { margin: 0 0 1em 2em; }
-body > dl, nav > ul, nav > ol, nav > ul > li > ul { list-style: none; }
-dt, dd, li { position: relative; margin: 0 0 0.5em 0; }
+:not(nav) > ul, :not(nav) > ol { margin: 0 0 1em 2em; }
+nav > ul, nav > ol, nav > ul > li > ul { list-style: none; }
+li { position: relative; margin: 0 0 0.5em 0; }
 p { max-width: 70em; margin: 0.25em 0 0.25em 2em; }
 pre { margin: 1em 0 1em 4em; }
 a, a:visited { text-decoration: none; border-bottom: 1px dotted; color: #4799b1; }
