--- a/src/Moss/autodoc/view/autodoc.twig
+++ b/src/Moss/autodoc/view/autodoc.twig
@@ -6,8 +6,6 @@
 
     <title>{% trans "MOSS" %}</title>
 
-    <link rel="author" href="./humans.txt"/>
-
     <!--[if lt IE 9]>
     <script type="text/javascript" src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -82,28 +80,27 @@
         <a class="up" href="{{ Url() }}#header">{% trans "Up" %}</a>
     </nav>
 
-    <dl>
+    <ul>
         {% for Class in Comments %}
-            <dt id="{{ Class.id }}">
-            <h3>
-                <code>{% if Class.interface %}interface{% elseif Class.abstract %}abstract{% endif %} {{ Class.name }} {% if Class.parent %} extends {{ Class.parent }}{% endif %} {% if Class.interfaces %} implements {% for Interface in Class.interfaces %} {{ Interface }} {% if not loop.last %},{% endif %} {% endfor %}{% endif %}</code>
-            </h3>
-            </dt>
-            <dd>
+            <li id="{{ Class.id }}">
+                <h3>
+                    <code>{% if Class.interface %}interface{% elseif Class.abstract %}abstract{% endif %} {{ Class.name }} {% if Class.parent %} extends {{ Class.parent }}{% endif %} {% if Class.interfaces %} implements {% for Interface in Class.interfaces %} {{ Interface }} {% if not loop.last %},{% endif %} {% endfor %}{% endif %}</code>
+                </h3>
+
                 <ul>
                     <li>{{ Class.desc }}</li>
                     <li class="package"><em>Package:</em> {{ Class.package }}</li>
                     <li class="author"><em>Author:</em> {{ Class.author }}</li>
                 </ul>
 
-                <dl>
+                <ul>
                     {% for Method in Class.methods if Method.isUserDefined %}
-                        <dt id="{{ Method.id }}">
+                    <li id="{{ Method.id }}">
                         <h4 class="token-name">
                             <code>{% if Method.isAbstract %}abstract{% endif %} {% if Method.isStatic %}static{% endif %} {% if Method.isPublic %}public{% elseif Method.isProtected %}protected{% else %}private{% endif %} {{ Class.name }} :: {{ Method.name }} ( {% for Attr in Method.arguments %}{% if not Attr.required %}[{% endif %} {% for type in Attr.type %} {{ type }} {% if not loop.last %} | {% endif %} {% endfor %} ${{ Attr.name }} {% if not Attr.required %} = {% if Attr.default %}{{ Attr.default }}{% else %}null{% endif %}{% endif %} {% if not Attr.required %}]{% endif %} {% if not loop.last %} , {% endif %}{% endfor %} )</code>
                         </h4>
-                        </dt>
-                        <dd>
+
+                        <ul>
                             <p>{{ Method.desc }}</p>
 
                             <ul>
@@ -114,12 +111,13 @@
                                     </dd>
                                 {% endfor %}
                             </ul>
-                        </dd>
+                        </ul>
+                    </li>
                     {% endfor %}
-                </dl>
-            </dd>
+                </ul>
+            </li>
         {% endfor %}
-    </dl>
+    </ul>
 </section>
 
 <script type="text/javascript">
