--- a/src/moss/sample/view/login.twig
+++ b/src/moss/sample/view/login.twig
@@ -2,7 +2,12 @@
 
 {% block body %}
     <p>Controller source is protected with credentials (just type <var>login</var> / <var>password</var>)</p>
-    <form action="" method="post">
+
+    {% for message in flash %}
+        <p class="{{ message.type }}">{{ message.message }}</p>
+    {% endfor %}
+
+    <form action="{{ url('moss:sample:Sample:login') }}" method="post">
         <input type="text" name="login" placeholder="login"/>
         <input type="text" name="password" placeholder="password"/>
         <button type="submit">Submit</button>
