--- a/src/moss/sample/view/source.twig
+++ b/src/moss/sample/view/source.twig
@@ -1,7 +1,7 @@
 {% extends 'moss:sample:index' %}
 
 {% block body %}
-    <p>Below is controllers source, to logout click <a href="{{ Url('moss:sample:sample:logout') }}">here</a></p>
+    <p>Below is controllers source, to logout click <a href="{{ url('moss:sample:sample:logout') }}">here</a></p>
     <code>{{ controller|raw }}</code>
     <p>As you can see, there is no actual authorisation. Login/password are tokenized in <var>security</var> component. The rest happens inside that component and in bootstrap</p>
     <p>And this is bundles bootstrap file</p>
