urls by route names

--- a/src/Moss/Sample/View/index.twig
+++ b/src/Moss/Sample/View/index.twig
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>{{ method }} <small>&lt;-- this is namespaced controller class and its currently executed action</small></h1>% block body %}
-    <p>Moss sample controller and <a href="{{ url('Moss:Sample:Sample:source') }}">it looks like this</a></p>
+    <p>Moss sample controller and <a href="{{ url('source') }}">it looks like this</a></p>
 {% endblock %}
 </body>
 </html>
