--- a/src/Moss/Sample/View/login.twig
+++ b/src/Moss/Sample/View/login.twig
@@ -7,7 +7,7 @@
         <p class="{{ message.type }}">{{ message.message }}</p>
     {% endfor %}
 
-    <form action="{{ url('Moss:Sample:Sample:login') }}" method="post">
+    <form action="{{ url('login') }}" method="post">
         <input type="text" name="login" placeholder="login"/>
         <input type="text" name="password" placeholder="password"/>
         <button type="submit">Submit</button>
